--- a/demo/env.html
+++ b/demo/env.html
@@ -14,11 +14,11 @@
         #animation {
             font-size: 16px;
             font-family: Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
-            float: right;
-            margin-top: 2em;
-            margin-right: 20px;
-            line-height: 2em;
+            line-height: 1.6em;
             color: white;
+            right: 20px;
+            top: 1em;
+            position: absolute;
             height: 90%;
         }
 
