--- a/demo/doc.html
+++ b/demo/doc.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>动画案例</title>
+    <link rel="SHORTCUT ICON" href="http://www.baidu.com/favicon.ico">
     <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="../lib/bootstrap-treeview.min.css">
@@ -55,6 +56,7 @@
         }
         #image {
             background-color: #000000;
+            overflow-y: scroll;
         }
         pre {
             font-size: 15px;
@@ -119,10 +121,10 @@
         },
         'loreal': {
             img: [
-                'bg-1.png',
-                'bg-2.png',
+                'bg-1.jpg',
+                'bg-2.jpg',
                 'highlight.png',
-                'mid-img.png',
+                'mid-img.jpg',
                 'paper.png',
                 'ret-img-1.jpg',
                 'ret-img-2.jpg'
