--- a/demo/doc.html
+++ b/demo/doc.html
@@ -143,6 +143,9 @@
             img: [
                 'run.png'
             ]
+        },
+        '3d-cube': {
+            img: []
         }
     };
     function getTree() {
