--- a/demo/env.html
+++ b/demo/env.html
@@ -48,19 +48,21 @@
 </div>
 <script>
     require.config({baseUrl: '../dist/amd'});
-    require(['Event', 'Compiler', 'KFCompatible', 'Keyframe', 'Util'], function (Event, Compiler, Compatible, Keyframe, Util) {
+    require(['Event', 'Compiler', 'KFCompatible', 'Keyframe', 'Util', 'ClassProxy'], function (Event, Compiler, Compatible, Keyframe, Util, ClassProxy) {
         var compiler = Compiler.instance();
         var compatible = Compatible.instance();
         var data;
         var _group;
         function refresh(code) {
             eval(code);
-            _group = group;
+            if (group) {
+                _group = group;
+                _group.onEnd(function () {
+                    document.getElementById('animation').innerHTML += 'finished!';
+                });
+            }
             //group.start();
             document.getElementById('animation').innerHTML = '';
-            _group.onEnd(function () {
-                document.getElementById('animation').innerHTML += 'finished!';
-            });
         }
         compatible.on(Event.css, function (eventName, dom, key, css) {
             document.getElementById('animation').innerHTML += '<em data-id=' + dom.id + '>' + dom.id + ' (' + key + ':' + css + ')</em></br>';
