--- a/demo/jd-book/index.app.html
+++ b/demo/jd-book/index.app.html
@@ -8,6 +8,11 @@
         <script type="text/javascript" src="http://ecma.bdimg.com/public01/keyframes/dist/lib/Keyframe.min.js"></script>
         <script type="text/javascript" src="http://ecmc.bdimg.com/public01/pl-h5-page/sdk/xuandong/main.js"></script>
     </head>
+    <style>
+        body {
+            background-color: #000000;
+        }
+    </style>
     <body>
 <!-- 请在下方区域编辑 HTML --> <!--  HTML CONTENT START  -->
 
