--- a/example/index.html
+++ b/example/index.html
@@ -99,11 +99,6 @@
     <li onclick="document.getElementById('frame').setAttribute('src', './custom/hover.html')">hover</li>
 </ul>
 <ul>
-    demo<br/>
-    <li onclick="document.getElementById('frame').setAttribute('src', './demo/run.html')">run</li>
-    <li onclick="document.getElementById('frame').setAttribute('src', './demo/scale_a.html')">scale_a</li>
-</ul>
-<ul>
     flipper<br/>
     <li onclick="document.getElementById('frame').setAttribute('src', './flipper/flip.html')">flip</li>
     <li onclick="document.getElementById('frame').setAttribute('src', './flipper/flipInX.html')">flipInX</li>
@@ -114,7 +109,7 @@
 <ul>
     loading<br/>
     <li onclick="document.getElementById('frame').setAttribute('src', './loading/audioWave.html')">audioWave</li>
-    <li onclick="document.getElementById('frame').setAttribute('src', './loading/circSquare.html')">circSquare</li>
+    <li onclick="document.getElementById('frame').setAttribute('src', './loading/circleSquare.html')">circSquare</li>
     <li onclick="document.getElementById('frame').setAttribute('src', './loading/gw.html')">gw</li>
     <li onclick="document.getElementById('frame').setAttribute('src', './loading/snake.html')">snake</li>
     <li onclick="document.getElementById('frame').setAttribute('src', './loading/spinDisc.html')">spinDisc</li>
