--- a/example/loading/gW.html
+++ b/example/loading/gW.html
@@ -6,7 +6,7 @@
     <title>loading.GW</title>
     <script src="../../src/lib.js"></script>
     <script src="../../lib/jquery.min.js"></script>
-    <script src="../../src/loading/gW.js"></script>
+    <script src="../../src/loading/gw.js"></script>
     <script>
         var btn = Keyframe.defineClass('btn', {
             'background-color': '#000000',
