--- a/example/3d.html
+++ b/example/3d.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>炫动-移动</title>
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
     <link rel="shortcut icon" href="http://www.baidu.com/favicon.ico" type="image/x-icon">
     <script src="../dist/lib.min.js"></script>
     <style>
@@ -11,152 +11,247 @@
             height: 100%;
             margin: 0;
             overflow: hidden;
+            background-color: #000000;
         }
-        #container {
-            width: 100%;
-            height: 100%;
-            position: relative;
-        }
-        #frame1 {
-            width: 25px;
-            position: absolute;
-            height: 60px;
-            left: 108px;
-            top: 0px;
-            opacity: 1;
-            background: url(http://bs.baidu.com/public03/2e897163616c44fddada5bad03fdcc62.png) no-repeat;
-            background-size: 100% 100%;
-        }
-        #frame2 {
-            width: 150px;
-            position: absolute;
-            height: 150px;
-            left: 45px;
-            top: 15px;
-            opacity: 0;
-            background: url(http://bs.baidu.com/public03/9dead4c5f9d0f4207faba69eed020959.png) no-repeat;
-            background-size: 100% 100%;
-        }
-        #frame3 {
-            width: 150px;
-            position: absolute;
-            height: 150px;
-            left: 80px;
-            opacity: 0;
-            top: 15px;
-            background: url(http://bs.baidu.com/public03/5f77e9c925ca8814cd779da3127ba576.png) no-repeat;
-            background-size: 100% 100%;
-        }
-        #frame4 {
-            position: absolute;
-            opacity: 0;
-            width: 55px;
-            height: 75px;
-            left: 62px;
-            top: 89px;
-            background: url(http://bs.baidu.com/public03/de7e49534a28de35b65314e8285b1f64.png) no-repeat;
-            background-size: 100% 100%;
-        }
-        #frame5 {
-            width: 180px;
-            position: absolute;
-            height: 140px;
-            left: 0px;
-            top: 15px;
-            opacity: 0;
-            background: url(http://bs.baidu.com/public03/98e241f90a5302ad09c93c06f0a51d99.png) no-repeat;
-            background-size: 100% 100%;
+
+        .btn {
+            color: white;
         }
     </style>
 </head>
 <body>
-<div id="container">
-    <div id="frame5"></div>
-    <div id="frame3"></div>
-    <div id="frame4"></div>
-    <div id="frame2"></div>
-    <div id="frame1"></div>
+<span class="btn">backface<input type="checkbox"/></span>
+<span class="btn">toggle<input type="checkbox"/></span>
+
+<div class="box-3d">
+    <div id="container" class="scene state-1">
+        <div id="surface1" class="init big-cube cube-1">1</div>
+        <div id="surface2" class="init big-cube cube-2">2</div>
+        <div id="surface3" class="init big-cube cube-3">3</div>
+        <div id="surface4" class="init big-cube cube-4">4</div>
+        <div id="surface5" class="init big-cube cube-5">5</div>
+        <div id="surface6" class="init big-cube cube-6">6</div>
+        <div id="surface7" class="init small-cube cube-7">7</div>
+        <div id="surface8" class="init small-cube cube-8">8</div>
+        <div id="surface9" class="init small-cube cube-9">9</div>
+        <div id="surface10" class="init small-cube cube-10">10</div>
+        <div id="surface11" class="init small-cube cube-11">11</div>
+        <div id="surface12" class="init small-cube cube-12">12</div>
+    </div>
 </div>
+
 <script>
-    var config = {
-        "container": {
-            "transform-style": "preserve-3d"
+    var cpl = Compiler.instance();
+    var rot = cpl.defineKeyframe({
+        '0': {
+            'transform': 'rotateY(0)'
         },
-        "frame1": {
-            "0.6": {
-                "translateY": "0px"
-            },
-            "1.2": {
-                "translateY": "55px",
-                "opacity": 1
-            },
-            "1.8": {
-                "translateY": "55px",
-                "opacity" : 0
-            }
-        },
-        "frame2": {
-            "0": {
-                "scale": 0.2
-            },
-            "1.18": {
-                "opacity": 0
-            },
-            "1.2": {
-                "opacity": 1,
-                "scale": 0.2
-            },
-            "2.1": {
-                "opacity": 0,
-                "scale": 1
-            }
-        },
-        "frame3": {
-            "2.1": {
-                "opacity": 0
-            },
-            "2.3": {
-                "opacity": 0.1
-            },
-            "2.9": {
-                "opacity": 0.5
-            },
-            "3.1": {
-                "opacity": 1
-            }
-        },
-        "frame4@ease-in-out#infinite": {
-            "0": {
-                "opacity": 0
-            },
-            "3.1": {
-                "opacity": 0
-            },
-            "3.12": {
-                "opacity": 1,
-                "translateX":"0px",
-                "rotateZ":"0deg"
-            },
-            "4.32": {
-                "translateX": "-60px",
-                "opacity": 1,
-                "rotateZ":"360deg"
-            }
-        },
-        "frame5": {
-            "3.7": {
-                "opacity": 0
-            },
-            "3.9": {
-                "opacity": 1
-            }
+        '100': {
+            'transform': 'rotateY(360deg)'
         }
-    };
-    var group = Keyframe.group(config);
-    group.onEnd(function() {
-        console.log('finished');
     });
-    group.start();
+    cpl.defineClass('box-3d', {
+        'transform-style': 'preserve-3d',
+        'perspective': '600px'
+    });
+    cpl.defineClass('hidden init', {
+        'backface-visibility': 'hidden'
+    });
+    function randomColor() {
+        var map = [1, 2, 3, 4, 5, 6, 7, 8, 9, 'a', 'b', 'c', 'd', 'e', 'f'];
+        var color = '#';
+        var count = 6;
+        while (count-- > 0) {
+            color += map[Math.round(Math.random() * 14)]
+        }
+        return color;
+    }
+    cpl.defineClass('init', {
+        'position': 'absolute',
+        'transition': 'all ease-in-out 2s',
+        'text-align': 'center',
+        'vertical-align': 'middle',
+        'backface-visibility': 'visible'
+    });
+    var scene = new ClassProxy('scene', {
+        'width': '200px',
+        'height': '200px',
+        'margin': '150px auto',
+        'position': 'relative',
+        'transform-style': 'preserve-3d'
+    });
+    scene.selector('init', {
+        'background-color': randomColor(),
+        'border': '1px solid ' + randomColor(),
+        'color': randomColor()
+    });
+    var state1 = new ClassProxy('state-1');
+    state1.selectors({
+        'big-cube': {
+            'width': '100%',
+            'height': '100%',
+            'border-radius': '10px',
+            'font-size': '100px',
+            'line-height': '200px',
+            'left': 0,
+            'top': 0,
+            'opacity': 0.5
+        },
+        'small-cube': {
+            'width': '50%',
+            'height': '50%',
+            'left': '25%',
+            'top': '25%',
+            'font-size': '50px',
+            'line-height': '100px',
+            'border-radius': '5px',
+            'opacity': 0.5
+        },
+        'cube-1': {
+            'transform-origin': '50% 50%',
+            'transform': 'translateZ(-100px) rotateY(180deg)'
+        },
+        'cube-2': {
+            'transform-origin': '0% 50%',
+            'transform': 'translateZ(-100px) rotateY(-90deg)'
+        },
+        'cube-3': {
+            'transform-origin': '0% 50%',
+            'transform': 'translateZ(100px)'
+        },
+        'cube-4': {
+            'transform-origin': '100% 50%',
+            'transform': 'translateZ(-100px) rotateY(90deg)'
+        },
+        'cube-5': {
+            'transform-origin': '0% 100%',
+            'transform': 'translateZ(-100px) rotateX(-90deg)'
+        },
+        'cube-6': {
+            'transform-origin': '0% 0%',
+            'transform': 'translateZ(-100px) rotateX(90deg)'
+        },
+        'cube-7': {
+            'transform-origin': '50% 50%',
+            'transform': 'translateZ(-50px) rotateY(180deg)'
+        },
+        'cube-8': {
+            'transform-origin': '0% 50%',
+            'transform': 'translateZ(-50px) rotateY(-90deg)'
+        },
+        'cube-9': {
+            'transform-origin': '0% 50%',
+            'transform': 'translateZ(50px)'
+        },
+        'cube-10': {
+            'transform-origin': '100% 50%',
+            'transform': 'translateZ(-50px) rotateY(90deg)'
+        },
+        'cube-11': {
+            'transform-origin': '0% 100%',
+            'transform': 'translateZ(-50px) rotateX(-90deg)'
+        },
+        'cube-12': {
+            'transform-origin': '0% 0%',
+            'transform': 'translateZ(-50px) rotateX(90deg)'
+        }
+    });
+
+
+    var state2 = new ClassProxy('state-2');
+    var distance = Math.ceil(150 / Math.tan(Math.PI / 6)) + 20;
+    distance = ' translateZ(' + distance + 'px)';
+    state2.selectors({
+        'big-cube': {
+            'width': '150px',
+            'height': '150px',
+            'border-radius': '10px',
+            'font-size': '100px',
+            'line-height': '150px',
+            'left': '25px',
+            'top': '25px',
+            'opacity': 0.5
+        },
+        'small-cube': {
+            'width': '150px',
+            'height': '150px',
+            'border-radius': '10px',
+            'font-size': '100px',
+            'line-height': '150px',
+            'left': '25px',
+            'top': '25px',
+            'opacity': 0.5
+        },
+        'cube-1': {
+            'transform': distance
+        },
+        'cube-2': {
+            'transform': 'rotateY(30deg)' + distance
+        },
+        'cube-3': {
+            'transform': 'rotateY(60deg)' + distance
+        },
+        'cube-4': {
+            'transform': 'rotateY(90deg)' + distance
+        },
+        'cube-5': {
+            'transform': 'rotateY(120deg)' + distance
+        },
+        'cube-6': {
+            'transform': 'rotateY(150deg)' + distance
+        },
+        'cube-7': {
+            'transform': 'rotateY(180deg)' + distance
+        },
+        'cube-8': {
+            'transform': 'rotateY(210deg)' + distance
+        },
+        'cube-9': {
+            'transform': 'rotateY(240deg)' + distance
+        },
+        'cube-10': {
+            'transform': 'rotateY(270deg)' + distance
+        },
+        'cube-11': {
+            'transform': 'rotateY(300deg)' + distance
+        },
+        'cube-12': {
+            'transform': 'rotateY(330deg)' + distance
+        }
+    });
+    cpl.compile();
+    var container = document.getElementById('container');
+    var krot = new Keyframe(container, {
+        'name': rot,
+        'count': 'infinite',
+        'duration': '12s'
+    });
+    krot.start();
+    var btn = document.getElementsByTagName('input');
+    Util.on(btn[0], 'change', function (e) {
+        if (e.target.checked) {
+            Util.addClass(container, 'hidden');
+        }
+        else {
+            Util.removeClass(container, 'hidden');
+        }
+    });
+    Util.on(btn[1], 'change', function (e) {
+        scene.selector('init', {
+            'background-color': randomColor(),
+            'border': '1px solid ' + randomColor(),
+            'color': randomColor()
+        });
+        cpl.compile();
+        if (e.target.checked) {
+            Util.removeClass(container, 'state-1')
+            Util.addClass(container, 'state-2');
+        }
+        else {
+            Util.removeClass(container, 'state-2')
+            Util.addClass(container, 'state-1');
+        }
+    });
 </script>
 </body>
 </html>
