--- a/demo/3d-effect/index.app.html
+++ b/demo/3d-effect/index.app.html
@@ -11,8 +11,9 @@
     <!-- <script src="http://172.18.20.113:8080/target/target-script-min.js#anonymous"></script>-->
 </head>
 <body>
-<span class="btn">toggle<input type="checkbox"/></span>
-<div id="container" class="scene" >
+<input type="button" value="Explode"/>
+<div class="stage">
+    <div id="container" class="scene canvas" ></div>
 </div>
 <script type="text/javascript" src="main.js"></script>
 </body>
