--- a/index.html
+++ b/index.html
@@ -85,22 +85,18 @@
             margin: auto;
             border: none;
         }
-        .wall em {
+        .wall {
             color: #fff;
-            position: absolute;
-            left: 130px;
-            top: 130px;
+            text-align: center;
+            line-height: 300px;
             font-size: 40px;
         }
         #after {
             background-color: #000;
             color: #fff;
             font-size: 40px;
-        }
-        #after em {
-            left: 60px;
-            top: 80px;
-            position: absolute;
+            text-align: center;
+            line-height: 200px;
         }
         /* 3d转换中掉所有元素都应该为absolute布局，从所在空间点(0,0)点开始变换*/
         .space {
@@ -112,13 +108,13 @@
 <div class="scene">
     <div class="p3d space">
         <div class="zuobiao space">
-            <div class="z wall space"><em>Z</em></div>
-            <div class="x wall space"><em class="z90">X</em></div>
-            <div class="y wall space"><em class="x180">Y</em></div>
+            <div class="z wall space">Z</div>
+            <div class="x wall space">X</div>
+            <div class="y wall space">Y</div>
         </div>
         <div class="demo space">
             <div id="before" class="target space"></div>
-            <div id="after" class="target space"><em>炫动</em></div>
+            <div id="after" class="target space">炫动</div>
         </div>
         <div class="ec-audioWave space"></div>
         <div class="ec-snake space"></div>
@@ -375,22 +371,16 @@
     });
     Keyframe.defineClass('y', {
         'background-color': 'red',
-        'transform-origin': 'bottom',
-        'translateY': '-300px',
-        'translateZ': '300px',
-        'rotateX': '90deg'
+        'rotateX': '-90deg',
+        'translateZ': '-150px',
+        'translateY': '-150px'
     });
     Keyframe.defineClass('x', {
         'background-color': 'green',
-        'transform-origin': 'right',
-        'translateX': '-300px',
-        'rotateY': '90deg'
-    });
-    Keyframe.defineClass('z90', {
-        'rotateZ': '90deg'
-    });
-    Keyframe.defineClass('x180', {
-        'rotateX': '180deg'
+        'rotateY': '90deg',
+        'rotateZ': '90deg',
+        'translateZ': '-150px',
+        'translateY': '150px'
     });
     Keyframe.defineClass('z', {
         'background-color': 'blue'
