--- a/demo/doc.html
+++ b/demo/doc.html
@@ -31,6 +31,7 @@
             border: 1px solid #ddd;
             height: 400px;
             border-radius: 5px;
+            padding: 0!important;
         }
 
         #container {
@@ -163,6 +164,12 @@
             ]
         },
         '3d-cube': {
+            img: []
+        },
+        'spring': {
+            img: []
+        },
+        'gen': {
             img: []
         }
     };
