--- a/demo/env.html
+++ b/demo/env.html
@@ -10,6 +10,7 @@
     <style>
         html, body {
             background-color: #272822;
+            overflow: hidden;
         }
         #animation {
             font-size: 16px;
