--- a/demo/jd-book/index.app.html
+++ b/demo/jd-book/index.app.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>炫动 - 百度</title>
         <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="shortcut icon" href="http://www.baidu.com/favicon.ico" type="image/x-icon">
         <script type="text/javascript" src="http://ecmc.bdimg.com/public01/keyframes/dist/lib/Keyframe.min.js"></script>
         <script type="text/javascript" src="http://ecmc.bdimg.com/public01/pl-h5-page/sdk/xuandong/main.js"></script>
     </head>
