--- a/demo/spring/index.app.html
+++ b/demo/spring/index.app.html
@@ -6,17 +6,19 @@
         <title>炫动 - 百度</title>
         <link rel="stylesheet" type="text/css" href="main.css">
         <link rel="shortcut icon" href="http://www.baidu.com/favicon.ico" type="image/x-icon">
-        <script type="text/javascript" src="http://ecmc.bdimg.com/public01/keyframes/dist/lib/Keyframe.min.js"></script>
+        <script type="text/javascript" src="../../dist/lib/Keyframe.min.js"></script>
     </head>
     <body>
 <!-- 请在下方区域编辑 HTML --> <!--  HTML CONTENT START  -->
 
-<div id="container" class="class-scale">
-    <div id="frame5"></div>
-    <div id="frame3"></div>
-    <div id="frame4"></div>
-    <div id="frame2"></div>
-    <div id="frame1"></div>
+<div id="container" class="stage">
+    <div id="frame1" class="circle"></div>
+    <div id="frame2" class="circle"></div>
+    <div id="frame3" class="circle"></div>
+    <div id="frame4" class="circle"></div>
+    <div id="frame5" class="circle"></div>
+    <div id="frame6" class="circle"></div>
+    <div id="frame7" class="circle"></div>
 </div>
 <!--  HTML CONTENT END  --> <!-- 请在上方区域编辑 HTML -->
 <script type="text/javascript" src="main.js"></script>
