--- a/demo/doc.html
+++ b/demo/doc.html
@@ -171,6 +171,9 @@
         },
         'gen': {
             img: []
+        },
+        'gen2': {
+            img: []
         }
     };
     function getTree() {
