--- a/demo/doc.html
+++ b/demo/doc.html
@@ -29,7 +29,7 @@
 
         iframe {
             border: 1px solid #ddd;
-            height: 400px;
+            height: 411px;
             border-radius: 5px;
             padding: 0!important;
         }
@@ -71,6 +71,13 @@
 
         pre {
             font-size: 15px;
+        }
+
+        #tree .list-group {
+            margin-bottom: 10px;
+        }
+        #left {
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -158,11 +165,11 @@
                 '5.png'
             ]
         },
-        'step-by-step': {
+        /*'step-by-step': {
             img: [
                 'run.png'
             ]
-        },
+        },*/
         '3d-cube': {
             img: []
         },
