--- a/demo/env.html
+++ b/demo/env.html
@@ -37,6 +37,10 @@
             z-index: 1000!important;
             opacity: 1 !important;
         }
+        #dom-html {
+            width: 100%;
+            height: 100%;
+        }
     </style>
     <script src="../lib/require.js"></script>
     <script src="../dist/amd/lib/Keyframe.js"></script>
