--- a/demo/doc.html
+++ b/demo/doc.html
@@ -86,7 +86,7 @@
     <div class="page-header" style="position: relative">
         <h1>Write & compile in time
             <small style="margin-left: 20px;"><a target="_blank" href="../index.html" style="cursor: pointer;">keyframes
-                animation api doc</a></small>
+                configure map</a></small>
             <small style="margin-left: 20px;"><a target="_blank" href="../example/_doc.html"
                                                  style="cursor: pointer;position: absolute;right: 0;bottom: 15px;">简版</a>
             </small>
