--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>API DOC</title>
+    <title>Configure Map</title>
     <link rel="SHORTCUT ICON" href="http://www.baidu.com/favicon.ico">
     <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
