--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
 </div>
 <div class="page-header z-top">
-    <h1>Keyframes Animation API DOC<small style="margin-left: 20px;"><a target="_blank" href="example/doc.html" style="cursor: pointer;">write & compile in time</a></small></h1>
+    <h1>Keyframes Configure Map<small style="margin-left: 20px;"><a target="_blank" href="example/doc.html" style="cursor: pointer;">write & compile in time</a></small></h1>
 </div>
 <div class="api">
     <script>
