--- a/transition.html
+++ b/transition.html
@@ -108,7 +108,7 @@
 </head>
 <body>
 <div class="page-header">
-    <h1>Transform Animation API DOC</h1>
+    <h1>Transition Animation API DOC</h1>
 </div>
 <div class="api">
     <script>
@@ -300,7 +300,7 @@
             }
         };
         require.config({baseUrl: 'dist/amd'});
-        require(["Transform", "Event", "Util", "Keyframe"], function (Transform, Event, Util, Keyframe) {
+        require(["Transition", "Event", "Util", "Keyframe"], function (Transition, Event, Util, Keyframe) {
             var _scale, _top;
             if ($(window).height() > 700) {
                 _scale = '1.3, 1.3';
@@ -370,7 +370,7 @@
                 'backface-visibility': 'visible'
             });
             Keyframe.compile();
-            var fake = new Transform(document.getElementById('fake'));
+            var fake = new Transition(document.getElementById('fake'));
             var fn, mock;
             Util.each(table.doc, function(item, i) {
                 fn = item.fn;
@@ -400,7 +400,7 @@
             $('.api').html(Mustache.render(document.getElementById('template').innerHTML, table));
             var t;
             setTimeout(function () {
-                t = new Transform(document.getElementById('target'), true);
+                t = new Transition(document.getElementById('target'), true);
                 t.on(Event.next, function () {
                     console.log(arguments);
                 });
@@ -431,7 +431,7 @@
 </div>
 <pre>
     所有的变换，可以函数链式调用，只有在上一个变换完成后，才会开始下一个变换，比如：
-    var t = new Transform(document.getElementById('frame1'), true);
+    var t = new Transition(document.getElementById('frame1'), true);
     t.on(Event.next, function() {
         console.log(arguments); // 下一个变换开始时触发
     });
@@ -532,9 +532,9 @@
     </div>
 </div>
 <div id="fake">
-    <h4>打包好的Transform.js地址(AMD)：<a target="_blank" href="dist/amd/lib/Transform.js">bs.baidu.com/public01/keyframes/dist/amd/lib/Transform.js</a></h4>
-    <h4>未打包的Transform.js地址(AMD)：<a target="_blank" href="dist/amd/Transform.js">bs.baidu.com/public01/keyframes/dist/amd/Transform.js</a></h4>
-    <h4>打包好的Transform.js地址(非AMD)：<a target="_blank" href="dist/lib/Transform.min.js">bs.baidu.com/public01/keyframes/dist/lib/Transform.min.js</a></h4>
+    <h4>打包好的Transition.js地址(AMD)：<a target="_blank" href="dist/amd/lib/Transition.js">bs.baidu.com/public01/keyframes/dist/amd/lib/Transition.js</a></h4>
+    <h4>未打包的Transition.js地址(AMD)：<a target="_blank" href="dist/amd/Transition.js">bs.baidu.com/public01/keyframes/dist/amd/Transition.js</a></h4>
+    <h4>打包好的Transition.js地址(非AMD)：<a target="_blank" href="dist/lib/Transition.min.js">bs.baidu.com/public01/keyframes/dist/lib/Transition.min.js</a></h4>
     <h4>源代码:<a target="_blank" href="https://github.com/tingkl/keyframes">https://github.com/tingkl/keyframes</a></h4>
 </div>
 </body>
