--- a/demo/env.html
+++ b/demo/env.html
@@ -43,7 +43,7 @@
         }
     </style>
     <script src="../lib/require.js"></script>
-    <script src="../dist/amd/lib/Keyframe.js"></script>
+    <script src="../dist/umd/lib/Keyframe.js"></script>
 </head>
 <body>
 <div id="dom-html">
@@ -52,7 +52,7 @@
 <div id="animation">
 </div>
 <script>
-    require.config({baseUrl: '../dist/amd'});
+    require.config({baseUrl: '../dist/umd'});
     require(['Event', 'Compiler', 'KFCompatible', 'Keyframe', 'Util', 'ClassProxy'], function (Event, Compiler, Compatible, Keyframe, Util, ClassProxy) {
         var compiler = Compiler.instance();
         var compatible = Compatible.instance();
