--- a/example/env.html
+++ b/example/env.html
@@ -131,7 +131,7 @@
         }
     </style>
     <script src="../lib/require.js"></script>
-    <script src="../dist/amd/lib/Keyframe.js"></script>
+    <script src="../dist/umd/lib/Keyframe.js"></script>
 </head>
 <body>
 <div id="container">
@@ -153,7 +153,7 @@
 </div>
 <ul><li><a target="_blank" href="../demo/jd-book/index.app.html">跳动样例</a></li><li><a target="_blank" href="../demo/jd-1212/index.app.html">摇摆样例</a></li><li><a target="_blank" href="../demo/loreal-ice/index.app.html">移动样例</a></li><li><a target="_blank" href="xuandong.html">炫动样例</a></li><li><a target="_blank" href="xuandong-require.html">炫动样例(amd)</a></li><li><a target="_blank" href="stepByStep.html">逐帧样例</a></li></ul>
 <script>
-require.config({baseUrl: '../dist/amd'});
+require.config({baseUrl: '../dist/umd'});
 require(['Event', 'Compiler', 'KFCompatible', 'Keyframe', 'Util'], function (Event, Compiler, Compatible, Keyframe, Util) {
     var compiler = Compiler.instance();
     var compatible = Compatible.instance();
