--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
 </div>
 <div class="page-header z-top">
-    <h1>Keyframes Configure Map<small style="margin-left: 20px;"><a target="_blank" href="example/doc.html" style="cursor: pointer;">write & compile in time</a></small></h1>
+    <h1>Keyframes Configure Map<small style="margin-left: 20px;"><a target="_blank" href="demo/doc.html" style="cursor: pointer;">write & compile in time</a></small></h1>
 </div>
 <div class="api">
     <script>
@@ -437,10 +437,10 @@
     });
     Keyframe.compile();
 </script>
-<h4>动画样例：<a target="_blank" href="example/index.html">bs.baidu.com/public01/keyframes/example/index.html</a></h4>
-<h4>打包好的Keyframe.js地址(UMD)：<a target="_blank" href="dist/umd/lib/Keyframe.js">bs.baidu.com/public01/keyframes/dist/umd/lib/Keyframe.js</a></h4>
-<h4>未打包的Keyframe.js地址(UMD)：<a target="_blank" href="dist/umd/Keyframe.js">bs.baidu.com/public01/keyframes/dist/umd/Keyframe.js</a></h4>
-<h4>打包好的Keyframe.js地址(非UMD)：<a target="_blank" href="dist/lib/Keyframe.min.js">bs.baidu.com/public01/keyframes/dist/lib/Keyframe.min.js</a></h4>
+<h4>动画样例：<a target="_blank" href="example/index.html">//static.leanote.top/keyframes/example/index.html</a></h4>
+<h4>打包好的Keyframe.js地址(UMD)：<a target="_blank" href="dist/umd/lib/Keyframe.js">//static.leanote.top//keyframes/dist/umd/lib/Keyframe.js</a></h4>
+<h4>未打包的Keyframe.js地址(UMD)：<a target="_blank" href="dist/umd/Keyframe.js">//static.leanote.top//keyframes/dist/umd/Keyframe.js</a></h4>
+<h4>打包好的Keyframe.js地址(非UMD)：<a target="_blank" href="dist/lib/Keyframe.min.js">//static.leanote.top//keyframes/dist/lib/Keyframe.min.js</a></h4>
 <h4>源代码:<a target="_blank" href="https://github.com/tingkl/keyframes">https://github.com/tingkl/keyframes</a></h4>
 </body>
 </html>
